[package]
name = "spiritvale-capture"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
libloading = "0.8.9"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
