[package]
name = "spiritvale-capture"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
libloading = "0.8.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_ToolHelp",
] }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
